# Vibrance

./: AGENTS.md  LICENSE  Makefile  README.md  TROUBLESHOOTING.md  pyproject.toml  requirements.txt  vibrance.py  vibrance_gui.py
app/: core.py  keyboard.py  macros.py
app/mode/: code.py  llm.py
app/server/: server.py
app/server/engines/: parakeet_engine.py  speech_engine.py  whisper_engine.py
src/app/: cli.py  macros.py
src/app/server/: server.py
src/vibevoice/: cli.py  macros.py  server.py
